<?xml version="1.0"?>
<package format="2">
  <name>gripper_description</name>
  <version>0.1.0</version>
  <description>URDF and meshes of the lightweight fourbar parallel-link two-jaw gripper</description>


  <maintainer email="lkmuk2017@gmail.com">Laikan Muk</maintainer>


  <license>MIT</license>


  <url type="website">https://github.com/lkmuk/parallel-gripper</url>


  <exec_depend>rviz</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
